@@ -11,6 +11,7 @@ Version 1.10.2+svn:
      Portuguese (Brazil).
  * Whiteboard
    * Fixed bug #19613 : Multiple attacks after planning attacks in whiteboard.
+   * Fixed bug #19619 : In local games, units keep ghosted appearance during opponent's turn.
 
 
 Version 1.10.2:
