@@ -23,6 +23,7 @@
 #include "highlight_visitor.hpp"
 #include "mapbuilder.hpp"
 #include "move.hpp"
+#include "attack.hpp"
 #include "recall.hpp"
 #include "recruit.hpp"
 #include "side_actions.hpp"
@@ -72,7 +73,8 @@ manager::manager():
 		key_poller_(new CKey),
 		hidden_unit_hexes_(),
 		net_buffer_(resources::teams->size()),
-		team_plans_hidden_(resources::teams->size(),preferences::hide_whiteboard())
+		team_plans_hidden_(resources::teams->size(),preferences::hide_whiteboard()),
+		units_owning_moves_()
 {
 	LOG_WB << "Manager initialized.\n";
 }
@@ -134,6 +136,7 @@ void manager::print_help_once()
 bool manager::can_modify_game_state() const
 {
 	if(wait_for_side_init_
+					|| resources::teams == NULL
 					|| executing_actions_
 					|| is_observer()
 					|| resources::controller->is_linger_mode())
@@ -304,16 +307,8 @@ void manager::on_finish_side_turn(int side)
 	LOG_WB << "on_finish_side_turn()\n";
 }
 
-void manager::pre_delete_action(action_ptr action)
+void manager::pre_delete_action(action_ptr)
 {
-	//If we're deleting the last planned move of a unit, reset it to normal animation
-	if (action->is_valid()
-			&& action->get_unit()
-			&& boost::dynamic_pointer_cast<move>(action)
-			&& viewer_actions()->count_actions_of(action->get_unit()) == 1)
-	{
-		action->get_unit()->set_standing(true);
-	}
 }
 
 void manager::post_delete_action(action_ptr action)
@@ -456,6 +451,72 @@ static void draw_numbers(map_location const& hex, side_actions::numbers_t number
 		x_offset += x_offset_base;
 		y_offset += y_offset_base;
 	}
+}
+
+
+namespace
+{
+	//Helper struct that finds all units teams whose planned actions are currently visible
+	//Only used by manager::pre_draw() and post_draw()
+	struct move_owners_finder
+		: private enable_visit_all<move_owners_finder>, public visitor
+	{
+		friend class enable_visit_all<move_owners_finder>;
+
+	public:
+		move_owners_finder()
+			: move_owners_()
+		{
+			//Thanks to the default pre_visit_team, will only visit visible side_actions
+			visit_all_actions();
+		}
+
+		std::set<size_t> const& get_units_owning_moves() {
+			return move_owners_;
+		}
+
+	private:
+		virtual void visit(move_ptr move) {
+			move_owners_.insert(move->get_unit()->underlying_id());
+		}
+		virtual void visit(attack_ptr attack) {
+			//also add attacks if they have an associated move
+			if (boost::static_pointer_cast<move>(attack)->get_route().steps.size() >= 2) {
+				move_owners_.insert(attack->get_unit()->underlying_id());
+			}
+		}
+		virtual void visit(recruit_ptr){}
+		virtual void visit(recall_ptr){}
+		virtual void visit(suppose_dead_ptr){}
+
+		std::set<size_t> move_owners_;
+	};
+}
+
+void manager::pre_draw()
+{
+	if (can_modify_game_state() && has_actions())
+	{
+	units_owning_moves_ = move_owners_finder().get_units_owning_moves();
+	foreach(size_t unit_id, units_owning_moves_)
+	{
+		unit_map::iterator unit_iter = resources::units->find(unit_id);
+		assert(unit_iter.valid());
+		ghost_owner_unit(&*unit_iter);
+	}
+	}
+}
+
+void manager::post_draw()
+{
+	foreach(size_t unit_id, units_owning_moves_)
+	{
+		unit_map::iterator unit_iter = resources::units->find(unit_id);
+		if (unit_iter.valid()) { 
+			unghost_owner_unit(&*unit_iter);
+	}
+	}
+	units_owning_moves_.clear();
 }
 
 namespace
@@ -729,9 +790,6 @@ void manager::save_temp_move()
 		}
 		erase_temp_move();
 
-		//@todo rework this once I combine mapbuilder and verifier
-		ghost_owner_unit(u);
-
 		LOG_WB << *viewer_actions() << "\n";
 		print_help_once();
 	}
@@ -751,13 +809,10 @@ void manager::save_temp_attack(const map_location& attacker_loc, const map_locat
 		arrow_ptr move_arrow;
 		fake_unit_ptr fake_unit;
 		map_location source_hex;
-		bool attack_move;
 
 		if (route_ && !route_->steps.empty())
 		{
 			//attack-move
-			attack_move = true;
-
 			assert(move_arrows_.size() == 1);
 			assert(fake_units_.size() == 1);
 			move_arrow = move_arrows_.front();
@@ -771,8 +826,6 @@ void manager::save_temp_attack(const map_location& attacker_loc, const map_locat
 		else
 		{
 			//simple attack
-			attack_move = false;
-
 			move_arrow.reset(new arrow);
 			source_hex = attacker_loc;
 			route_.reset(new pathfind::marked_route);
@@ -782,11 +835,6 @@ void manager::save_temp_attack(const map_location& attacker_loc, const map_locat
 
 		unit* attacking_unit = future_visible_unit(source_hex);
 		assert(attacking_unit);
-
-		if (attack_move) {
-			//@todo rework this once I combine mapbuilder and verifier
-			ghost_owner_unit(attacking_unit);
-		}
 
 		on_save_action(attacking_unit);
 
