@@ -13,6 +13,7 @@ Version 1.10.2+svn:
      Portuguese (Brazil)
  * Whiteboard
    * Fixed bug #19613 : Multiple attacks after planning attacks in whiteboard
+   * Fixed bug #19619 : In local games, units keep ghosted appearance during opponent's turn
  * WML engine:
    * Fix $owner_side in capture events fired due to unit movement
 
